# codeflow-harness

./: .env.example  .gitignore  README.md  benchmark.md  improvements.md  pyproject.toml  task.md
.github/workflows/: benchmark-real-llm.yml  benchmark-smoke.yml  ci.yml
benchmark/: README.md  run_benchmark.py  tasks.yaml
benchmark/reports/: BENCHMARK_RUNBOOK.md  DATASET_STATUS.md  FAILURE_TAXONOMY.md  bugsinpy_candidate_manifest.json  bugsinpy_stable_50_checkout_manifest.json  current_real_full_llm_results.json  current_real_full_llm_results.md  current_real_results.json  current_real_results.md  quixbugs_excluded_manifest.json  swebench_lite_10_checkout_manifest.json  swebench_lite_candidate_manifest.json  swebench_lite_full_checkout_manifest.json  swebench_verified_10_checkout_manifest.json  swebench_verified_candidate_manifest.json  trends.md
benchmark/schemas/: result.schema.json  task.schema.json
benchmark/scripts/: _harness_bench_common.py  archive_run.py  build_trend_report.py  check_llm_env.py  compare_runs.py  fake_mini.py  inspect_artifact.py  prepare_all_benchmark_data.py  prepare_bugsinpy.py  prepare_harness_bench.py  prepare_quixbugs.py  prepare_swebench.py  run_eval.py  run_swebench_lite_full.sh  summarize_results.py
benchmark/tasks/: bugsinpy_stable_20.yaml  bugsinpy_stable_50.yaml  bugsinpy_subset.yaml  bugsinpy_youtubedl_5.yaml  bugsinpy_youtubedl_extra.yaml  bugsinpy_youtubedl_subset.yaml  harness_bench.yaml  quixbugs.yaml  quixbugs_extended.yaml  quixbugs_full.yaml  swebench_lite_10_subset.jsonl  swebench_lite_2_subset.jsonl  swebench_lite_5_subset.jsonl  swebench_lite_full.jsonl  swebench_lite_random_50_20260505T125144Z.jsonl  (+5 more)
codeflow/: __init__.py  cli.py  config.py  diff_reviewer.py  doctor.py  git_guard.py  init_project.py  mini_runner.py  models.py  prompt_builder.py  redaction.py  report_writer.py  runner.py  semantic.py  spec_builder.py  test_gate.py  utils.py
docs/: CODEFLOW_IMPLEMENTATION.md  PROJECT_OVERVIEW.md  harness_design.md  report_benchmark.md  report_mini_swe_agent.md  report_non_mini_parts.md  report_project_introduction.md
minisweagent/: __init__.py
tests/: test_benchmark_quixbugs.py  test_diff_reviewer.py  test_git_guard.py  test_governance.py  test_harness_policy.py  test_harness_sensors.py  test_init_doctor.py  test_mini_runner.py  test_observability_cli.py  test_observability_service.py  test_prompt_builder.py  test_redaction.py  test_runner.py  test_semantic.py  test_spec_builder.py  test_test_gate.py
(+73 files in other folders)
