[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codeflow-agent"
version = "0.1.0"
description = "Trusted execution harness for mini-swe-agent v2"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "mini-swe-agent>=2.0.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
codeflow = "codeflow.cli:app"

[tool.setuptools.packages.find]
include = ["codeflow*"]

[tool.uv.sources]
mini-swe-agent = { path = "mini-swe-agent", editable = true }

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
